openshift-gitops/clusters/core.lab.cross.solutions/platform-apps/operator-openshift-dev-spaces/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-devspaces
  namespace: openshift-devspaces
