openshift-gitops/clusters/core.lab.cross.solutions/platform-apps/operator-openshift-dev-spaces/networkpolicy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-openshift-ingress
  namespace: openshift-devspaces
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              policy-group.network.openshift.io/ingress: ''
  podSelector: {}
  policyTypes:
    - Ingress
